--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+
+<html>
+
+<link rel=stylesheet href="styles.css"
+<title>ALURAFLIX</title>
+
+</html>
+
+
 <body>
     <header>ALURAFLIX</header>
 
